--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
         <div class="btm">
           <div class="wrapper">
-            <a class="item">
+            <a class="item card-open">
               <h2 class="heading">Запчасти
                 для телефонов</h2>
               <img src="./media/imgs/items/1.png" alt="" class="bg">
@@ -387,6 +387,94 @@
 
   </div>
 
+  <div class="card-modal">
+    <svg class="card-close" width="39" height="48" viewBox="0 0 39 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M8.36133 13.426L29.5745 34.6392" stroke="#2D2D2D" stroke-width="2" stroke-linecap="round" />
+      <path d="M8.36133 34.426L29.5745 13.2128" stroke="#2D2D2D" stroke-width="2" stroke-linecap="round" />
+    </svg>
+
+    <div class="top">
+      <div class="top-r">
+        <img src="./media/imgs/cart/2.png" alt="" class="top-r-img">
+      </div>
+      <div class="top-l">
+        <p class="heading">Дисплей</p>
+        <div class="select-item active">
+          <p class="select-heaidng">Цвет</p>
+          <div class="select-input">
+            <p class="select-input-name">Выберите цвет</p>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M6 9L12 15L18 9" stroke="#2D2D2D" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </div>
+          <div class="select-list">
+            <li class="select-list__item">Черный</li>
+            <li class="select-list__item">Белый</li>
+            <li class="select-list__item">Серый</li>
+          </div>
+        </div>
+
+        <div class="select-item">
+          <p class="select-heaidng">Модель</p>
+          <div class="select-input">
+            <p class="select-input-name">Выберите модель</p>
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M6 9L12 15L18 9" stroke="#2D2D2D" stroke-width="2" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </svg>
+          </div>
+          <div class="select-list active">
+            <li class="select-list__item">Черный</li>
+            <li class="select-list__item">Белый</li>
+            <li class="select-list__item">Серый</li>
+          </div>
+        </div>
+        <div class="nalichie">
+          <p class="nalichie__heading">Наличие</p>
+          <p class="nalichie__nal">В наличии</p>
+        </div>
+        <p class="price">28 000 ₽</p>
+        <div class="top-buttons">
+          <div class="count">
+            <div class="decrement">-</div>
+            <p class="count-num">1</p>
+            <div class="increment">+</div>
+          </div>
+          <button class="add-to-cart">В корзину</button>
+        </div>
+      </div>
+    </div>
+    <div class="btm">
+      <p class="btm__heading">Сопутствующие товары</p>
+      <div class="wrapper">
+        <div class="item">
+          <img src="./media/imgs/cart/3.png" alt="">
+          <p class="name">Проклейка</p>
+          <p class="price">28 000 ₽</p>
+          <button class="add-to-cart">В корзину</button>
+        </div>
+        <div class="item">
+          <img src="./media/imgs/cart/3.png" alt="">
+          <p class="name">Проклейка</p>
+          <p class="price">28 000 ₽</p>
+          <button class="add-to-cart">В корзину</button>
+        </div>
+        <div class="item">
+          <img src="./media/imgs/cart/3.png" alt="">
+          <p class="name">Проклейка</p>
+          <p class="price">28 000 ₽</p>
+          <button class="add-to-cart">В корзину</button>
+        </div>
+        <div class="item">
+          <img src="./media/imgs/cart/3.png" alt="">
+          <p class="name">Проклейка</p>
+          <p class="price">28 000 ₽</p>
+          <button class="add-to-cart">В корзину</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
   <div class="offset"></div>
