--- a/cart.html
+++ b/cart.html
@@ -101,7 +101,7 @@
                   </label>
                 </div>
               </div>
-              <div class="form-adres-dost form-item active" data-v="1">
+              <div class="form-adres-dost map form-item active" data-v="1">
                 <p class="form-item__heading">Адрес доставки</p>
                 <div class="input-wrapper">
                   <button class="active">На карте</button>
@@ -151,11 +151,6 @@
                 <p class="form-item__heading">Способ оплаты</p>
                 <div class="wrapper">
                   <label>
-                    <input type="radio" name="oplata" value="1">
-                    <div class="radio-visual"></div>
-                    <p class="label-heading">Картой онлайн</p>
-                  </label>
-                  <label>
                     <input type="radio" name="oplata" value="2">
                     <div class="radio-visual"></div>
 
@@ -167,14 +162,6 @@
 
                     <p class="label-heading">Наличными при получении</p>
                   </label>
-                </div>
-                <div class="card-wrapper">
-                  <input type="text" placeholder="Номер карты">
-                  <div class="input-wrapper">
-                    <input type="text" placeholder="Дата">
-                    <input type="text" placeholder="CVV">
-                  </div>
-
                 </div>
               </div>
             </div>
