--- a/index.html
+++ b/index.html
@@ -388,6 +388,14 @@
   </div>
 
   <div class="card-modal">
+    <div class="top-mob">
+      <p class="heading">Дисплей</p>
+      <svg class="card-close" width="39" height="48" viewBox="0 0 39 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M8.36133 13.426L29.5745 34.6392" stroke="#2D2D2D" stroke-width="2" stroke-linecap="round" />
+        <path d="M8.36133 34.426L29.5745 13.2128" stroke="#2D2D2D" stroke-width="2" stroke-linecap="round" />
+      </svg>
+    </div>
+
     <svg class="card-close" width="39" height="48" viewBox="0 0 39 48" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M8.36133 13.426L29.5745 34.6392" stroke="#2D2D2D" stroke-width="2" stroke-linecap="round" />
       <path d="M8.36133 34.426L29.5745 13.2128" stroke="#2D2D2D" stroke-width="2" stroke-linecap="round" />
