--- a/index.html
+++ b/index.html
@@ -140,23 +140,31 @@
           <ul class="list">
             <li class="item">
               <img src="./media/icons/contacts/1.svg" alt="" class="icon">
-              <p class="item__heaidng">Адрес</p>
-              <p class="item__text">ул. ... д.1</p>
+              <div class="item__info">
+                <p class="item__heaidng">Адрес</p>
+                <p class="item__text">ул. ... д.1</p>
+              </div>
             </li>
             <li class="item">
               <img src="./media/icons/contacts/2.svg" alt="" class="icon">
-              <p class="item__heaidng">Режим работы</p>
-              <p class="item__text">с ... до ...</p>
+              <div class="item__info">
+                <p class="item__heaidng">Режим работы</p>
+                <p class="item__text">с ... до ...</p>
+              </div>
             </li>
             <li class="item">
               <img src="./media/icons/contacts/3.svg" alt="" class="icon">
-              <p class="item__heaidng">Номер телефона</p>
-              <p class="item__text">+7(999)999-99-99</p>
+              <div class="item__info">
+                <p class="item__heaidng">Номер телефона</p>
+                <p class="item__text">+7(999)999-99-99</p>
+              </div>
             </li>
             <li class="item">
               <img src="./media/icons/contacts/4.svg" alt="" class="icon">
-              <p class="item__heaidng">Почта</p>
-              <p class="item__text">...</p>
+              <div class="item__info">
+                <p class="item__heaidng">Почта</p>
+                <p class="item__text">...</p>
+              </div>
             </li>
           </ul>
         </div>
